--- a/data/testimonialsData.yml
+++ b/data/testimonialsData.yml
@@ -3,17 +3,17 @@ testimonials:
     testimonial: Working as a Content Moderator (for EngEd program at) Section has been the best thing to happen to me in the last 2 years. I have learned a lot and developed a lot of new skills.
     image: /authors/ahmad-mardeni/avatar.jpg
     roles: ["Contributor", "Peer Reviewer", "Content Moderator"]
-    location: Baton Rouge, LA
-    profileUrl: /engineering-education/authors/ahmad-mardeni/
+    location: Damascus, Syria
+    profileUrl: /authors/ahmad-mardeni/
   - name: John A.
     testimonial: I felt that my EngEd portfolio added something great to set me apart from my peers who are also looking for available career positions.
     image: /authors/john-amiscaray/avatar.jpg
     roles: ["Contributor", "Peer Reviewer"]
-    location: San Diego, CA
-    profileUrl: /engineering-education/authors/john-amiscaray/
+    location: Toronto, Canada
+    profileUrl: /authors/john-amiscaray/
   - name: Sophia R.
     testimonial: The Peer Review Program has allowed me to deepen my knowledge of cutting-edge technologies or learn about new ones entirely.
     image: /authors/sophia-raji/avatar.jpg
     roles: ["Contributor", "Intern"]
-    location: Denver, CO
-    profileUrl: /engineering-education/authors/sophia-raji/
+    location: New York City, New York
+    profileUrl: /authors/sophia-raji/
