Update Section Intern.

--- a/data/testimonialsData.yml
+++ b/data/testimonialsData.yml
@@ -14,6 +14,6 @@ testimonials:
   - name: Sophia R.
     testimonial: The Peer Review Program has allowed me to deepen my knowledge of cutting-edge technologies or learn about new ones entirely.
     image: /authors/sophia-raji/avatar.jpg
-    roles: ["Contributor", "Intern"]
+    roles: ["Contributor", "Section Intern"]
     location: New York City, New York
     profileUrl: /authors/sophia-raji/
