--- a/data/testimonialsData.yml
+++ b/data/testimonialsData.yml
@@ -1,6 +1,6 @@
 testimonials: 
   - name: Ahmad M.
-    testimonial: Working as a Content Moderator (for EngEd program at) Section has been the best thing to happen to me in the last 2 years. I have learned a lot and developed a lot of new skills.
+    testimonial: Working as a Content Moderator for (the EngEd program at) Section has been the best thing to happen to me in the last 2 years. I have learned a lot and developed a lot of new skills.
     image: /authors/ahmad-mardeni/avatar.jpg
     roles: ["Contributor", "Peer Reviewer", "Content Moderator"]
     location: Damascus, Syria
