updating testimonial - Ahmad

--- a/data/testimonialsData.yml
+++ b/data/testimonialsData.yml
@@ -1,6 +1,6 @@
 testimonials: 
   - name: Ahmad M.
-    testimonial: Working as a Content Moderator for (the EngEd program at) Section has been the best thing to happen to me in the last 2 years. I have learned a lot and developed a lot of new skills.
+    testimonial: Working as a Content Moderator for (the EngEd program) at Section has taught me a lot. I developed many new skills and met some fantastic people. The EngEd program has allowed me to share my own thoughts through Tech Writing with the world.
     image: /authors/ahmad-mardeni/avatar.jpg
     roles: ["Contributor", "Peer Reviewer", "Content Moderator"]
     location: Damascus, Syria
