--- a/k8s/base/deployment.yml
+++ b/k8s/base/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: section-enged
-          image: hborrelli12/section-enged:a3677-dev
+          image: hborrelli12/section-enged:d0444section-enged
           imagePullPolicy: Always
           ports:
           - containerPort: 80
