--- a/data/badgesData.yml
+++ b/data/badgesData.yml
@@ -1,13 +1,19 @@
 badges:
-  - title: Peer Reviewer
+  "peer_reviewer": 
+    title: Peer </br>Reviewer
     url: /images/badges/peer-reviewer-badge.png
-  - title: Content Moderator
+  "content_moderator": 
+    title: Content </br>Moderator
     url: /images/badges/content-moderator-badge.png
-  - title: Code Contributor
+  "code_contributor": 
+    title: Code </br>Contributor
     url: /images/badges/code-contributor-badge.png
-  - title: Hackathon Participant 2022
+  "hackathon_participant_22":
+    title: Hackathon </br>Participant 2022
     url: /images/badges/hackathon-participant-22-badge.png
-  - title: Hackathon Winner 2022
-    url: /images/badges/hackathon-winnder-22-badge.png
-  - title: Community Builder
+  "hackathon_winner_22":  
+    title: Hackathon </br>Winner 2022
+    url: /images/badges/hackathon-winner-22-badge.png
+  "community_builder":
+    title: Community </br>Builder
     url: /images/badges/community-builder-badge.png
